--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarun Kaur</title>
+    <title>Tarun Kaur| Resume</title>
 
     <!-- Font - jetbrains mono -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,10 +23,10 @@
 </head>
 
 <body>
-    <nav class=" navbar">
+    <nav class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="index.html">
+                <a href="resume.html">
                     <img src="images/logo.png" alt="logo">
                 </a>
             </div>
@@ -43,31 +43,10 @@
             </div>
         </div>
     </nav>
-    <!-- Intro -->
-    <section class="intro">
-        <div class="container">
-            <div class="intro-content">
-                <h1 class="intro-heading text-xxl">
-                    Hi, I'm Tarun!
-                </h1>
-                <p class="intro-text text-md">
-                    I am a second year Computer Science & Business Adminstration Double Degree student at Wilfrid
-                    Laurier University. Passionate about the intersection of technology and business, I thrive on
-                    solving complex problems and exploring innovative solutions.
-                </p>
-                <p class="connect-text text-md">
-                    I'd love to connect. Feel free to:
-                </p>
-                <div class="intro-buttons">
-                    <a href="https://www.linkedin.com/in/tarundeep-kaur-582347257/" class="btn">Connect on
-                        LinkedIn</a>
-                    <a class="btn" href="mailto:tarundeepk1185@gmail.com">Send an Email</a>
-                </div>
-            </div>
-        </div>
+
+    <section class="resume">
+        <object data="Tarundeep Kaur - Resume.pdf" type="application/pdf" width="100%" height="500px">
+            <p>Unable to display PDF file. <a href="Tarundeep Kaur - Resume.pdf">Download</a>
+                instead.</p>
+        </object>
     </section>
-
-    <script src="js/main.js"></script>
-</body>
-
-</html>
